--- a/eladmin-system/src/main/resources/config/application.yml
+++ b/eladmin-system/src/main/resources/config/application.yml
@@ -37,6 +37,7 @@ spring:
     host: ${REDIS_HOST:127.0.0.1}
     port: ${REDIS_PORT:6379}
     password: ${REDIS_PWD:xk2694698}
+#    password: ${REDIS_PWD:Sjt@86088666}
     #连接超时时间
     timeout: 5000
     # 连接池配置
