--- a/eladmin-system/src/main/resources/config/application-dev.yml
+++ b/eladmin-system/src/main/resources/config/application-dev.yml
@@ -4,12 +4,12 @@ spring:
     druid:
       db-type: com.alibaba.druid.pool.DruidDataSource
       driverClassName: com.p6spy.engine.spy.P6SpyDriver
-#      url: jdbc:p6spy:mysql://localhost:3306/eladmin-mp?serverTimezone=Asia/Shanghai&characterEncoding=utf8&useSSL=false
-#      username: root
-#      password: xk2694698
       url: jdbc:p6spy:mysql://localhost:3306/eladmin-mp?serverTimezone=Asia/Shanghai&characterEncoding=utf8&useSSL=false
       username: root
-      password: Sjt@86088666
+      password: xk2694698
+#      url: jdbc:p6spy:mysql://localhost:3306/eladmin-mp?serverTimezone=Asia/Shanghai&characterEncoding=utf8&useSSL=false
+#      username: root
+#      password: Sjt@86088666
       # 初始连接数，建议设置为与最小空闲连接数相同
       initial-size: 20
       # 最小空闲连接数，保持足够的空闲连接以应对请求
