--- a/eladmin-system/src/main/resources/config/application.yml
+++ b/eladmin-system/src/main/resources/config/application.yml
@@ -23,7 +23,7 @@ spring:
     check-template-location: false
   profiles:
     # 激活的环境，如果需要 quartz 分布式支持，需要修改 active: dev,quartz
-    active: prod
+    active: dev
   data:
     redis:
       repositories:
